[gd_scene load_steps=18 format=3 uid="uid://mp15xma1rlvc"]

[ext_resource type="Texture2D" uid="uid://bcdmdwvb2d2b4" path="res://Scene_Switcher/enemy/asset/support_artillery.png" id="1_5m0aj"]
[ext_resource type="Script" path="res://Scene_Switcher/enemy/artillery.gd" id="1_kjnej"]
[ext_resource type="PackedScene" uid="uid://bow40sr71gndy" path="res://Scene_Switcher/ammo/bullet.tscn" id="2_hn3br"]
[ext_resource type="Texture2D" uid="uid://ctv3xdmujhudw" path="res://Scene_Switcher/enemy/asset/artillery.png" id="2_p5uix"]
[ext_resource type="Texture2D" uid="uid://d32id62gpfpn2" path="res://Scene_Switcher/enemy/asset/canon_artillery.png" id="3_14bam"]
[ext_resource type="Texture2D" uid="uid://c014acly0rr3p" path="res://Scene_Switcher/enemy/asset/vortex.png" id="4_5diju"]
[ext_resource type="Texture2D" uid="uid://bhccl3a4imefy" path="res://Scene_Switcher/ammo/asset/fire_sparkles.png" id="7_miexj"]
[ext_resource type="Animation" uid="uid://r7lhafkvamba" path="res://Scene_Switcher/enemy/fire_artillery.tres" id="9_djo8o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_klok1"]
size = Vector2(80, 160)

[sub_resource type="Gradient" id="Gradient_i6bd4"]
offsets = PackedFloat32Array(0.162577, 0.831288, 0.990798)
colors = PackedColorArray(1, 0.607843, 0, 1, 0.526793, 5.72633e-07, 1.06417e-07, 0.560784, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_s8hml"]
offsets = PackedFloat32Array(0, 0.705521, 1)
colors = PackedColorArray(0.219501, 0.219501, 0.219501, 1, 0.490196, 0.490196, 0.490196, 1, 1, 1, 1, 0)

[sub_resource type="Animation" id="Animation_mrm2l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../body_sprite/carriages_sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.15, 0.31)]
}

[sub_resource type="Animation" id="Animation_r4u7m"]
resource_name = "deploy_gun_carriages"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../body_sprite/carriages_sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.5, 1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_lq774"]
resource_name = "retract_gun_carriages"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../body_sprite/carriages_sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.5, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_34yxw"]
_data = {
"RESET": SubResource("Animation_mrm2l"),
"deploy_gun_carriages": SubResource("Animation_r4u7m"),
"retract_gun_carriages": SubResource("Animation_lq774")
}

[sub_resource type="Animation" id="Animation_u2mkv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("tower_sprite/fire_sparkles:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("tower_sprite/fire_sparkles2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("tower_sprite/fire_sparkles3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("tower_sprite/fire_sparkles4:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("tower_sprite/fire_sparkles5:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("tower_sprite/fire_sparkles:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("tower_sprite/fire_sparkles:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("tower_sprite/fire_sparkles2:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("tower_sprite/fire_sparkles3:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("tower_sprite/fire_sparkles4:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("tower_sprite/fire_sparkles5:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("tower_sprite/fire_sparkles2:frame")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("tower_sprite/fire_sparkles3:frame")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("tower_sprite/fire_sparkles4:frame")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("tower_sprite/fire_sparkles5:frame")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1xgdx"]
_data = {
"RESET": SubResource("Animation_u2mkv"),
"fire_artillery": ExtResource("9_djo8o")
}

[node name="artillery" type="CharacterBody2D"]
script = ExtResource("1_kjnej")
bullet_cooldown = 1.5
ammo_scene = ExtResource("2_hn3br")

[node name="body_sprite" type="Sprite2D" parent="."]
self_modulate = Color(0, 0.286275, 0.811765, 1)
scale = Vector2(0.31, 0.31)
texture = ExtResource("2_p5uix")

[node name="carriages_sprite" type="Sprite2D" parent="body_sprite"]
modulate = Color(2.36803e-05, 0.288075, 0.810668, 1)
scale = Vector2(0.15, 0.31)
texture = ExtResource("1_5m0aj")
flip_v = true

[node name="body_sprite" type="Sprite2D" parent="body_sprite"]
modulate = Color(0, 0.286275, 0.811765, 1)
texture = ExtResource("2_p5uix")

[node name="tower_pos" type="Marker2D" parent="body_sprite"]
position = Vector2(0, -130)

[node name="tower_sprite" type="Sprite2D" parent="."]
self_modulate = Color(0, 0.286275, 0.811765, 1)
position = Vector2(0, -40.3)
scale = Vector2(0.31, 0.31)
texture = ExtResource("3_14bam")

[node name="target" type="Marker2D" parent="tower_sprite"]
position = Vector2(0, 470)

[node name="fire_sparkles" type="Sprite2D" parent="tower_sprite"]
visible = false
position = Vector2(-64.5161, 45.1613)
scale = Vector2(1.06452, 1.06452)
texture = ExtResource("7_miexj")
flip_v = true
vframes = 3
frame = 2

[node name="fire_sparkles2" type="Sprite2D" parent="tower_sprite"]
visible = false
position = Vector2(-8.20295e-06, 45.1613)
scale = Vector2(1.06452, 1.06452)
texture = ExtResource("7_miexj")
flip_v = true
vframes = 3
frame = 2

[node name="fire_sparkles3" type="Sprite2D" parent="tower_sprite"]
visible = false
position = Vector2(64.5161, 45.1613)
scale = Vector2(1.06452, 1.06452)
texture = ExtResource("7_miexj")
flip_v = true
vframes = 3
frame = 2

[node name="fire_sparkles4" type="Sprite2D" parent="tower_sprite"]
visible = false
position = Vector2(32.258, 106.452)
scale = Vector2(1.06452, 1.06452)
texture = ExtResource("7_miexj")
flip_v = true
vframes = 3
frame = 2

[node name="fire_sparkles5" type="Sprite2D" parent="tower_sprite"]
visible = false
position = Vector2(-32.2581, 106.452)
scale = Vector2(1.06452, 1.06452)
texture = ExtResource("7_miexj")
flip_v = true
vframes = 3
frame = 2

[node name="insight_shoot" type="RayCast2D" parent="tower_sprite"]
target_position = Vector2(0, 2270)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 4.76837e-07)
shape = SubResource("RectangleShape2D_klok1")

[node name="left_wall" type="RayCast2D" parent="."]
target_position = Vector2(-80, 0)
collision_mask = 20

[node name="right_wall" type="RayCast2D" parent="."]
target_position = Vector2(80, 0)
collision_mask = 20

[node name="right_shoot" type="RayCast2D" parent="."]
position = Vector2(-16, 64)
target_position = Vector2(0, 600)

[node name="left_shoot" type="RayCast2D" parent="."]
position = Vector2(16, 64)
target_position = Vector2(0, 600)

[node name="Explosion" type="CPUParticles2D" parent="."]
emitting = false
amount = 500
lifetime = 1.3
one_shot = true
explosiveness = 1.0
texture = ExtResource("4_5diju")
emission_shape = 1
emission_sphere_radius = 14.47
spread = 180.0
gravity = Vector2(2.08165e-12, 2.08165e-12)
initial_velocity_min = 18.96
initial_velocity_max = 142.18
angular_velocity_max = 354.88
color_ramp = SubResource("Gradient_i6bd4")

[node name="Smokes" type="Node2D" parent="."]

[node name="Smoke20" type="CPUParticles2D" parent="Smokes"]
position = Vector2(0, -56)
emitting = false
amount = 100
lifetime = 3.0
texture = ExtResource("4_5diju")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
color_ramp = SubResource("Gradient_s8hml")

[node name="Smoke40" type="CPUParticles2D" parent="Smokes"]
position = Vector2(-24, -24)
emitting = false
amount = 100
lifetime = 3.0
texture = ExtResource("4_5diju")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
color_ramp = SubResource("Gradient_s8hml")

[node name="Smoke60" type="CPUParticles2D" parent="Smokes"]
position = Vector2(16, 8)
emitting = false
amount = 100
lifetime = 3.0
texture = ExtResource("4_5diju")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
color_ramp = SubResource("Gradient_s8hml")

[node name="Smoke80" type="CPUParticles2D" parent="Smokes"]
position = Vector2(-24, 40)
emitting = false
amount = 100
lifetime = 3.0
texture = ExtResource("4_5diju")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
color_ramp = SubResource("Gradient_s8hml")

[node name="Death_Smoke" type="CPUParticles2D" parent="Smokes"]
position = Vector2(16, 56)
emitting = false
amount = 100
lifetime = 3.0
texture = ExtResource("4_5diju")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
color_ramp = SubResource("Gradient_s8hml")

[node name="AnimationPlayer_body" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimationPlayer")
libraries = {
"": SubResource("AnimationLibrary_34yxw")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1xgdx")
}
